--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="" content="">
-    <title>Forme Logi</title>
+    <link rel="stylesheet" href="style.css" type="text/css" media="all" />
+    <title>Login Form</title>
   </head>
   <body>
-    
+    <main class="login">
+      <div class="login__container">
+        <h1 class="login__tatile"> Login</h1>
+      
+      <form class="login__form" method="get" accept-charset="utf-8">
+        <input type="email" class="login__input" placeholder="e-mail"/>
+        <span class="login__input-border"></span>
+        <input type="password"  class="login__input" placeholder="senha"/>
+        <span class="login__input-border "></span>
+        <button class="login__submit" type="submit">Submit</button>
+        <a class="login__reset" href="#">Esqueceu a Senha ?!</a>
+      </form>
+      </div>
+      </main>
   </body>
 </html>
